src/pages/index/index.less
@prefix: index;
@img_url: "https://redrock.cqupt.edu.cn/weapp/images";
// 图片外链 暂存地址

page {
  background-color: #fff;
}
.@{prefix} {
  font-family: "PingFangSC-Regular",
                "Hiragino Sans GB",
                "Helvetica Neue",
                "Helvetica";
  &--banner {
    position: relative;
    margin-top: 30rpx;
    margin-left: auto;
    margin-right: auto;
    width: 343*2rpx;
    height: 320rpx;
    border-radius: 10rpx;
    overflow: hidden;
    z-index: 5;
    box-shadow: 0 8rpx 22rpx #e0e0e0;
    swiper, image, navigator {
      width: 100%;
      height: 100%;
      border-radius: 0;
    }
    &__bar {
      position: absolute;
      top: 300rpx;
      left: 345rpx;
      margin-left: -175rpx;
      display: flex;
      justify-content: space-between;
      width: 350rpx;
    }
    &__bar-item {
      width: 100rpx;
      height: 5rpx;
      background-color: rgba(255, 255, 255, .4);
      transition: all 1s;
    }
    &__bar-item-active {
      background-color: #fff;
    }
  }
  &--course {
    &__title {
      margin: 40rpx auto;
      padding: 0 30rpx;
      height: 36rpx;
      font-size: 32rpx;
      line-height: 100%;
      font-weight: 400;
      font-family: 'PingFangSC-Medium';
      text:nth-of-type(2) {
        display: inline-block;
        margin-left: 20rpx;
      }
    }
    &__nav {
      float: right;
      font-size: 28rpx;
      color: #999;
    }
    &__scroll {
      position: relative;
      &::before {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        width: 30rpx;
        height: 160rpx;
        background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, .1));
        z-index: 10;
      }
      &::after {
        content: '';
        position: absolute;
        right: 0;
        top: 0;
        width: 30rpx;
        height: 160rpx;
        background: linear-gradient(to right, rgba(255, 255, 255, .1), rgba(255, 255, 255, 1));
        z-index: 10;
      }
    }
    &__scroll-view {
      width: 100%;
      height: 160rpx;
      white-space: nowrap;
      overflow: auto;
      .room {
        font-family: Consolas, monospace;
      }
    }
    ::-webkit-scrollbar {
      width: 0;
      height: 0;
      color: rgba(255, 255, 255, 0);
      display: none;
    }
    // 滚动条
    &__scroll-item {
      box-sizing: border-box;
      display: inline-block;
      margin-right: 20rpx;
      padding: 20rpx 30rpx;
      width: 400rpx;
      height: 160rpx;
      &:first-of-type {
        margin-left: 30rpx;
        background-image: url('@{img_url}/index__course-one.png');
      }
      &:nth-of-type(2) {
        background-image: url('@{img_url}/index__course-two.png');
      }
      &:last-of-type {
        margin-right: 30rpx;
        background-image: url('@{img_url}/index__course-three.png');
      }
      background-size: cover;
    }
    &__scroll-class {
      display: flex;
      justify-content: space-between;
      width: 340rpx;
      font-size: 30rpx;
      line-height: 65rpx;
      text-align: justify;
      color: #fff;
      text:first-of-type {
        width: 90rpx;
        text-align: left;
      }
      text:nth-of-type(2) {
        width: 95rpx;
        text-align: center;
        text-align: right;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
      text:last-of-type {
        width: 155rpx;
        text-align: right;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }
  &--service {
    &__line {
      display: flex;
      justify-content: space-between;
      padding: 0 30rpx;
    }
    &__title {
      margin: 50rpx auto;
      padding-left: 30rpx;
      padding-right: 30rpx;
      font-size: 32rpx;
      font-weight: 400;
      font-family: 'PingFangSC-Medium';
      height: 36rpx;
      line-height: 32rpx;
    }
    &__item {
      width: 160rpx;
      height: 160rpx;
      text-align: center;
      &-image {
        display: inline-block;
        width: 80rpx;
        height: 80rpx;
      }
      &-text {
        display: inline-block;
        width: 100%;
        height: 50rpx;
        line-height: 50rpx;
        font-size: 26rpx;
        vertical-align: bottom;
      }
      .updating {
        color: #d3d3d3;
      }
    }
  }
}

